[gd_scene load_steps=33 format=3 uid="uid://ou7iicbe68hh"]

[ext_resource type="Script" path="res://characters/enemies/basic_enemy/red_tank_enemy.gd" id="1_0rvtk"]
[ext_resource type="Texture2D" uid="uid://bvqnam4bgjrmo" path="res://assets/Tank_byBatuhanK/redtank/left_move_Red-Sheet.png" id="1_jt7nm"]
[ext_resource type="Texture2D" uid="uid://dunbp7qf10oid" path="res://assets/Tank_byBatuhanK/redtank/left_explode_red-Sheet.png" id="2_kp0ho"]
[ext_resource type="Texture2D" uid="uid://crgho2u3ntbvi" path="res://assets/Tank_byBatuhanK/redtank/left_fire_red-Sheet.png" id="3_8eobi"]
[ext_resource type="PackedScene" uid="uid://3wc8io6rgt70" path="res://characters/base_components/HealthComponent.tscn" id="5_qyi1k"]
[ext_resource type="PackedScene" uid="uid://7swef8ik41ff" path="res://characters/base_components/HurtboxComponent.tscn" id="6_2h3dg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xgyh2"]
atlas = ExtResource("1_jt7nm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u00r7"]
atlas = ExtResource("1_jt7nm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_758k2"]
atlas = ExtResource("2_kp0ho")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_er8q3"]
atlas = ExtResource("2_kp0ho")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u6te"]
atlas = ExtResource("2_kp0ho")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf7bx"]
atlas = ExtResource("2_kp0ho")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndsuc"]
atlas = ExtResource("2_kp0ho")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_46vqj"]
atlas = ExtResource("2_kp0ho")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_172iw"]
atlas = ExtResource("2_kp0ho")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgg0v"]
atlas = ExtResource("2_kp0ho")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23u70"]
atlas = ExtResource("2_kp0ho")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3jpn"]
atlas = ExtResource("2_kp0ho")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj3h7"]
atlas = ExtResource("2_kp0ho")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7yse"]
atlas = ExtResource("3_8eobi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dq2j"]
atlas = ExtResource("3_8eobi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rmyy"]
atlas = ExtResource("3_8eobi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cfkc"]
atlas = ExtResource("3_8eobi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vti2v"]
atlas = ExtResource("3_8eobi")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jivua"]
atlas = ExtResource("3_8eobi")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uuyv"]
atlas = ExtResource("3_8eobi")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyt56"]
atlas = ExtResource("3_8eobi")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xduj"]
atlas = ExtResource("3_8eobi")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nfym"]
atlas = ExtResource("3_8eobi")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5frj"]
atlas = ExtResource("3_8eobi")
region = Rect2(128, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c65fi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgyh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u00r7")
}],
"loop": true,
"name": &"left movement",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_758k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er8q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u6te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf7bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndsuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46vqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_172iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgg0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23u70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3jpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj3h7")
}],
"loop": true,
"name": &"left_destruction",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7yse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dq2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rmyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cfkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vti2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jivua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uuyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyt56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xduj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nfym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5frj")
}],
"loop": true,
"name": &"left_shooting",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0271l"]
radius = 154.548

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j56pf"]
size = Vector2(37, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rv6hl"]
size = Vector2(37, 7)

[node name="red_tank_enemy" type="CharacterBody2D"]
script = ExtResource("1_0rvtk")

[node name="HealthComponent" parent="." instance=ExtResource("5_qyi1k")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c65fi")
animation = &"left movement"

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource("CircleShape2D_0271l")

[node name="SturdyHitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("6_2h3dg")]
health = NodePath("../HealthComponent")

[node name="body" type="CollisionShape2D" parent="SturdyHitbox"]
position = Vector2(3.5, 5.5)
shape = SubResource("RectangleShape2D_j56pf")

[node name="CriticalHitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("6_2h3dg")]
health = NodePath("../HealthComponent")
damage_multiplier = 2.0

[node name="flag" type="CollisionShape2D" parent="CriticalHitbox"]
position = Vector2(3.5, -9.5)
shape = SubResource("RectangleShape2D_rv6hl")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_area_2d_body_exited"]
